storage/longhorn/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  ingressClassName: traefik
  rules:
    - host: longhorn.hemera.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  name: http
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: longhorn-tailscale
#   namespace: longhorn-system
# spec:
#   ingressClassName: tailscale
#   tls:
#     - hosts:
#         - longhorn
#   rules:
#     - http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: longhorn-frontend
#                 port:
#                   name: http
